--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "npx prettier --write src/**/*.js *.js",
     "lint": "npx eslint --fix --ext js .",
     "format": "yarn prettier && yarn format",
+    "fixtures": "node ./src/core/fixtures.js",
     "precommit": "lint-staged"
   },
   "jest": {
@@ -53,6 +54,9 @@
     "react-native": "0.50.3",
     "react-native-atoz-listview": "^0.0.7",
     "react-native-dismiss-keyboard": "^1.0.0",
-    "react-native-search-box": "^0.0.13"
+    "react-native-material-design-searchbar": "^1.1.7",
+    "react-native-material-ripple": "^0.7.5",
+    "react-native-search-box": "^0.0.13",
+    "time-ago": "^0.2.1"
   }
 }
